MDEV-4841 Wrong character set of ADDTIME() and DATE_ADD()